dev/tests/cases/pos/23_vow_fail.tv
df main() -> void {
    set balance: i64 = 0 - 5;
    vow(balance >= 0, "balance must never be negative");
    echo!("never reached");
}
