dev/tests/cases/neg/44_bridge_needs_new.tv
df main() -> void {
    set ch: bridge<i64> = list_new();
    echo!(recv(ch));
}
